# G-temp

./: README.md  TODO.md  pyproject.toml
src/gtemp/: __init__.py
